@@ -1,7 +1,7 @@
 AUX libxfcegui4-4.4.3-64bit-warning.patch 577 RMD160 50362fc361d3f4f4001d68349840176a745d40e9 SHA1 4d76caf91619bc749a3f700aa9accf385ed3e97b SHA256 991c444d001b7c1bad5e3fa1b7ec20321593b79ecf0acef6e2b40b63910e43a6
-DIST libxfcegui4-4.4.2.tar.bz2 565036 RMD160 1de306d67f9a38d72ec184e00471e4d53db3801d SHA1 554a30c02c92b76c8caad444040e18d8ec1737bc SHA256 622c2585f61666d9c46841829ba141e86861c73bd9041a3a73452d1c8df5ee91
 DIST libxfcegui4-4.4.3.tar.bz2 621245 RMD160 c0155a89e35d88d3c2e25fc2f38630309d50e916 SHA1 4f1ab2fb035b0aaeb01cbef15d7378726037bcc9 SHA256 8f45bc2ca5e9575b1b1d7f050ee70bdb9de16a35ca2f6838795e9f617343bb23
-EBUILD libxfcegui4-4.4.2.ebuild 881 RMD160 8fa7ed341ee81bf18d0f4259f6a0fe3b782d319c SHA1 c49875bac83961a17643fac7320dc5aab5825128 SHA256 cf59f3b4c598d9e52c9ec9d6b5a6df2c1d501b70bc1319699fa6fe32d1b98631
+DIST libxfcegui4-4.6.0.tar.bz2 650464 RMD160 fd6f196e001c010aef592a4dd9cd96b8f28f44cc SHA1 d8a3e86f90ad026c4a9fa369c9c3f6d4f3f6fd06 SHA256 d6287ad3ab841f4bae0ce62135a0ca31da9eae4185aa2b8cef6160c46fea3e42
 EBUILD libxfcegui4-4.4.3.ebuild 875 RMD160 c4a39431192bfd535336549bcc307d414273b0da SHA1 d8c56f0275498243a9398d2125ddc2a55aac2a4d SHA256 b1bd3d7fb886981f168c8554dc811c546242473f9925306d47a44a9dd0178f8b
-MISC ChangeLog 14810 RMD160 fe94c20457fb590d83e731d4e554dbc8398d8315 SHA1 017cda9cbe2e430401654289393b908ff9dc882b SHA256 a1991864f5ba5f08a59cae387ca0090d3b1c7397d2043e48587be6c1beb4e1c6
+EBUILD libxfcegui4-4.6.0.ebuild 878 RMD160 9b6e506f1d861d3150d9abab9678610b25c24aaa SHA1 ba8097e5e6c21066c4652cafaf2e27f62eb22a59 SHA256 0d56416141a464f8466f02a3688da234f899228d619cabee398412259e202edd
+MISC ChangeLog 14942 RMD160 91af81e3da94a568e7f86d1d9600aa42c2dec02e SHA1 8fc3dc80be1dde057a93ac781c4b76aa29a63d3b SHA256 3d3929bf3fa63c1afe99230e8ab3a5f66ecf5ce2d1951fc7e2a33382243e4da4
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
