@@ -1,33 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfcegui4/libxfcegui4-4.4.2.ebuild,v 1.8 2008/05/04 19:05:18 drac Exp $
-
-EAPI="prefix"
-
-inherit xfce44
-
-XFCE_VERSION=4.4.2
-xfce44
-
-DESCRIPTION="Unified widgets library"
-HOMEPAGE="http://www.xfce.org/projects/libraries"
-KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~x64-solaris"
-IUSE="debug doc startup-notification"
-
-RDEPEND="x11-libs/libSM
-	x11-libs/libX11
-	>=x11-libs/gtk+-2.6
-	>=xfce-base/libxfce4util-${XFCE_MASTER_VERSION}
-	startup-notification? ( x11-libs/startup-notification )"
-DEPEND="${RDEPEND}
-	dev-util/pkgconfig
-	doc? ( dev-util/gtk-doc )"
-
-DOCS="AUTHORS ChangeLog NEWS README TODO"
-
-src_unpack() {
-	unpack ${A}
-	sed -i -e "s:-Werror::g" "${S}"/configure || die "sed failed."
-}
-
-xfce44_core_package
