@@ -1,0 +1,31 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfcegui4/libxfcegui4-4.6.0.ebuild,v 1.1 2009/03/10 13:48:48 angelos Exp $
+
+EAPI="prefix 1"
+
+inherit xfce4
+
+xfce4_core
+
+DESCRIPTION="Unified widgets library"
+HOMEPAGE="http://www.xfce.org/projects/libraries"
+KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~x64-solaris ~x86-solaris"
+IUSE="debug doc startup-notification"
+
+RDEPEND="gnome-base/libglade
+	x11-libs/libSM
+	x11-libs/libX11
+	>=x11-libs/gtk+-2.6:2
+	>=xfce-base/libxfce4util-${XFCE_VERSION}
+	>=xfce-base/xfconf-${XFCE_VERSION}
+	startup-notification? ( x11-libs/startup-notification )"
+DEPEND="${RDEPEND}
+	dev-util/intltool
+	doc? ( dev-util/gtk-doc )"
+
+pkg_setup() {
+	XFCE_CONFIG+=" $(use_enable doc gtk-doc)"
+}
+
+DOCS="AUTHORS ChangeLog NEWS README TODO"
