@@ -1,6 +1,12 @@
 # ChangeLog for xfce-base/libxfcegui4
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfcegui4/ChangeLog,v 1.121 2008/12/22 17:02:27 angelos Exp $
+# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfcegui4/ChangeLog,v 1.122 2009/03/10 13:48:48 angelos Exp $
+
+*libxfcegui4-4.6.0 (10 Mar 2009)
+
+  10 Mar 2009; Christoph Mende <angelos@gentoo.org>
+  +libxfcegui4-4.6.0.ebuild:
+  Xfce-4.6 bump
 
   22 Dec 2008; Christoph Mende <angelos@gentoo.org>
   -libxfcegui4-4.4.2.ebuild:
